# temporal_reasoning

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md  ROADMAP.md  SKILL.md  fact_index.py  frontier_registry.py  install.py  mcp_server.py  minigraf_server.rs  minigraf_tool.py  pyproject.toml  report_issue.py  requirements.txt  skill.json  uninstall.py
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: at-scale-benchmark-nightly.yml  pylint.yml  pytest.yml  release.yml
docs/: testing-conventions.md
docs/superpowers/plans/: 2026-04-14-vulcan-rename.md  2026-04-26-mcp-server.md  2026-05-26-normalization.md  2026-05-26-phase5-git-ingestion.md  2026-05-27-vulcan-ingest-status.md  2026-06-04-semantic-retrieval.md  2026-06-10-cumulative-ingest-status.md  2026-06-18-import-extraction-13-langs.md  2026-07-04-external-dependency-labeling.md  2026-07-04-parallel-git-ingestion.md  2026-07-05-offload-import-resolution-to-workers.md  2026-07-13-ingest-lock-retry-staleness.md  2026-07-13-live-lock-holder-check.md  2026-07-14-git-ingestion-path-ignore.md  2026-07-14-git-ingestion-rename-tracking.md  2026-07-16-real-backend-test-migration.md  2026-07-17-persisted-fact-index-plan.md  2026-07-18-bitemporal-fact-index-plan.md  2026-07-19-at-scale-benchmark.md  2026-07-22-uuid-ident-boost-resolution.md  2026-07-24-body-diff-attribution.md  2026-07-24-frontier-registry.md  2026-07-24-lineage-provisional-fact-model.md
docs/superpowers/specs/: 2026-04-15-marketplace-publishing-design.md  2026-05-26-normalization-design.md  2026-05-26-openai-llm-strategy-design.md  2026-05-26-phase5-git-ingestion-design.md  2026-05-26-vulcan-ingest-status-design.md  2026-06-04-semantic-retrieval-design.md  2026-06-10-cumulative-ingest-status-design.md  2026-06-18-import-extraction-design.md  2026-07-04-external-dependency-labeling-design.md  2026-07-04-parallel-git-ingestion-design.md  2026-07-13-ingest-lock-retry-staleness-design.md  2026-07-13-live-lock-holder-check-design.md  2026-07-14-git-ingestion-path-ignore-design.md  2026-07-14-git-ingestion-rename-tracking-design.md  2026-07-16-real-backend-test-migration-design.md  2026-07-17-persisted-fact-index-design.md  2026-07-18-bitemporal-fact-index-design.md  2026-07-19-at-scale-benchmark-design.md  2026-07-22-uuid-ident-boost-resolution-design.md  2026-07-24-body-diff-attribution-design.md  2026-07-24-frontier-registry-design.md  2026-07-24-lineage-provisional-fact-model-design.md
evals/: benchmark.md  evals.json  run_isolated.py  validate_evals.py
evals/at_scale/: benchmark.md  metrics.py  query_ground_truth.json  report.py  run_ingestion_benchmark.py  run_query_benchmark.py
evals/at_scale/results/: ingestion-20260719T074053Z.json
hooks/: claude-code.json  codex.toml  finalize_hook.py  hermes.yaml  ingest_hook.py  openclaw.json  opencode.json  prepare_hook.py
prompts/: fewshots.txt  system.txt
skills/temporal-reasoning/: SKILL.md
temporal-reasoning-workspace/: seed_eval10.py  seed_eval11.py  seed_eval12.py  seed_eval2.py  seed_eval3.py  seed_eval4.py  seed_eval5.py  seed_eval6.py  seed_eval7.py  seed_eval8.py  seed_eval9.py
temporal-reasoning-workspace/iteration-4/: benchmark.json  review.html
temporal-reasoning-workspace/iteration-4/eval-10-memory-prepare-turn/: eval_metadata.json
temporal-reasoning-workspace/iteration-4/eval-11-audit-after-heavy-writes/: eval_metadata.json
temporal-reasoning-workspace/iteration-4/eval-8-git-ingestion-initiation/: eval_metadata.json
temporal-reasoning-workspace/iteration-4/eval-9-ingest-status-polling/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/: benchmark.json  benchmark.md
temporal-reasoning-workspace/iteration-5/eval-1-decision-storage/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-10-memory-prepare-turn/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-11-audit/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-12-already-running/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-2-memory-retrieval/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-3-preference-enforcement/: eval_metadata.json
temporal-reasoning-workspace/iteration-5/eval-4-conflict-detection/: eval_metadata.json
tests/: conftest.py  test_advanced.py  test_at_scale_ingestion_benchmark.py  test_at_scale_metrics.py  test_at_scale_query_benchmark.py  test_at_scale_report.py  test_fact_index.py  test_frontier_registry.py  test_install.py  test_mcp_server.py  test_minigraf_tool.py  test_report_issue.py  test_uninstall.py
tools/: query.json  report_issue.json  retract.json  transact.json
(+101 files in other folders)
