[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan"
version = "0.1.0"
description = "Perfect memory. Exact reasoning. Complete history. Bi-temporal graph memory for AI coding agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Aditya Mukhopadhyay", email = "github@adityamukho.invalid"}
]
keywords = ["ai-agents", "graph-database", "datalog", "knowledge-graph", "persistent-memory", "temporal-reasoning", "vulcan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
vulcan = "vulcan:main"

[tool.setuptools]
py-modules = ["vulcan"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0301", "C0303", "C0411", "C0413", "C0415", "R0801", "W0212", "W0611", "W0621"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
