[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-reasoning"
version = "0.3.0"
description = "Perfect memory. Exact reasoning. Complete history. Bi-temporal graph memory for AI coding agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aditya Mukhopadhyay", email = "webmaster@adityamukho.com"}
]
keywords = ["ai-agents", "graph-database", "datalog", "knowledge-graph", "persistent-memory", "temporal-reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "minigraf>=0.22.0",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "black>=25.11.0",
    "ruff>=0.15.12",
]

[tool.setuptools]
py-modules = ["mcp_server", "report_issue", "install"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0301", "C0303", "C0411", "C0413", "C0415", "R0801", "W0212", "W0611", "W0621"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
